# bahn-home

./: Cargo.toml
app/: bun.lockb  package.json  tailwind.config.js
app/src/: App.tsx  bindings.ts  main.tsx  rspc.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
railway-core/: Cargo.toml  README.md
railway-core/src/: error.rs  lib.rs  serialize.rs  types.rs
railway-core/src/api/: journeys.rs  locations.rs  mod.rs  refresh_journey.rs
railway-core/src/requester/: hyper.rs  mod.rs
railway-provider-hafas/: Cargo.toml  README.md
railway-provider-hafas/src/: client.rs  error.rs  format.rs  lib.rs  serialize.rs
railway-provider-hafas/src/api/: mod.rs
railway-provider-hafas/src/parse/: arrival_or_departure.rs  common.rs  date.rs  journey.rs  journeys_response.rs  leg.rs  line.rs  load_factor.rs  location.rs  locations_response.rs  mod.rs  operator.rs  polyline.rs  products.rs  remark.rs  stopover.rs
railway-provider-hafas/src/profile/: avv.rs  bart.rs  bls.rs  cfl.rs  cmta.rs  dart.rs  db.rs  insa.rs  irish_rail.rs  ivb.rs  kvb.rs  mobil_nrw.rs  mobiliteit_lu.rs  mod.rs  nahsh.rs  nvv.rs  oebb.rs  ooevv.rs  pkp.rs  rejseplanen.rs  resrobot.rs  rmv.rs  rsag.rs  saarvv.rs  salzburg.rs  sbahn_muenchen.rs  sncf.rs  svv.rs  tpg.rs  vbb.rs  vbn.rs  verbundlinie.rs  vgi.rs  vkg.rs  vmt.rs  vor.rs  vos.rs  vrn.rs  vsn.rs  vvt.rs  (+1 more)
railway-provider-hafas/src/profile/custom-certificates/: README.md  ivb.crt.pem
